# launchr

./: Cargo.toml  README.md
examples/: config.example.advanced.toml  config.example.toml
src/: app.rs  config.rs  main.rs  ui.rs
src/modules/: apps.rs  bookmarks.rs  calculator.rs  clipboard.rs  configs.rs  docker.rs  git.rs  history.rs  mod.rs  network.rs  notifications.rs  scratchpad.rs  scripts.rs  services.rs  shell.rs  ssh.rs
