[package]
name = "launchr"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clipboard = "0.5.0"
crossterm = "0.29.0"
dirs = "6.0.0"
hostname = "0.3"
notify-rust = "4.11.7"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.107"
ssh2 = "0.9.5"
sysinfo = "0.37.1"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
which = "8.0.0"

[features]
default = ["clipboard"]
clipboard = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1